--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <!-- max-width for ultra wide resolutions -->
   <div class="container-fluid" style="max-width: 1400px">
     <div class="row">
-      <aside class="col-lg-3 pb-3">
+      <aside class="col-lg-2 pb-3">
         <h2 id="form-heading" class="mt-1 h3 form-label">
           Search for a City:
         </h2>
@@ -39,9 +39,18 @@
         <div class="list-group" id="history"></div>
       </aside>
 
-      <div class="col-lg-9 pb-3">
-        <section id="today" class="mt-3" role="region" aria-live="polite"></section>
-        <section id="forecast" class="row mt-3" role="region" aria-live="polite"></section>
+      <!-- Today's data section -->
+      <div class="col-lg-10 pb-3">
+        <section id="today" class="mt-3" role="region" aria-live="polite">Today's data</section>
+
+      <!-- Forecast data section -->
+        <section id="forecast" class="row mt-3" role="region" aria-live="polite">
+          
+          <div class="card col-sm-2">
+              This is some text within a card body.
+          </div>
+
+
       </div>
     </div>
   </div>
