--- a/index.html
+++ b/index.html
@@ -41,15 +41,10 @@
 
       <!-- Today's data section -->
       <div class="col-lg-10 pb-3">
-        <section id="today" class="mt-3" role="region" aria-live="polite">Today's data</section>
+        <section id="today" class="mt-3" role="region" aria-live="polite"></section>
 
       <!-- Forecast data section -->
         <section id="forecast" class="row mt-3" role="region" aria-live="polite">
-          
-          <div class="card col-sm-2">
-              This is some text within a card body.
-          </div>
-
 
       </div>
     </div>
