change styles and add comments

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+  <!-- Page header -->
   <header class="container-fluid text-center text-white bg-dark p-2 weather-header">
     <h1>Weather Dashboard</h1>
   </header>
@@ -18,25 +19,39 @@
   <!-- max-width for ultra wide resolutions -->
   <div class="container-fluid" style="max-width: 1400px">
     <div class="row">
+
+      <!-- Current and historical search section -->
       <aside class="col-lg-2 pb-3">
         <h2 id="form-heading" class="mt-1 h3 form-label">
-          Search for a City:
+          Search for a city:
         </h2>
+
+        <!-- City search form -->
         <form id="search-form" class="form">
           <div class="form-inline form-group">
-            <div class="input-group">
+            <div>
               <input class="form-input weather-search" type="text" id="search-input" placeholder="London"
                 aria-labelledby="form-heading" aria-controls="today forecast" />
-              <div class="input-group-append">
-                <button type="submit" class="btn search-button" id="search-button" aria-label="submit search">
+              <div class="input-group-append" id="searchDiv">
+                <button type="submit" class="btn search-button card" id="search-button" aria-label="submit search">
                   Search
                 </button>
-                <hr class="hr weather-hr" />
               </div>
             </div>
           </div>
         </form>
-        <div class="list-group" id="history"></div>
+
+          <!-- Historical searches section -->
+          <div class="list-group" id="history">
+            <h2 class="mt-1 h3">
+              Past searches:
+            </h2>
+
+          <button class="card btn" id="btnHistory">
+              City name
+          </button>
+
+        </div>
       </aside>
 
       <!-- Today's data section -->
