--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-  <link rel="stylesheet" href="/assets/css/styles.css" />
+  <link rel="stylesheet" href="./assets/css/styles.css" />
   <title>Weather Dashboard</title>
 </head>
 
@@ -54,13 +54,15 @@
         </div>
       </aside>
 
+    <!-- Weather sections -->
+    <div class="col-lg-10 pb-3">
+
       <!-- Today's data section -->
-      <div class="col-lg-10 pb-3">
-        <section id="today" class="mt-3" role="region" aria-live="polite"></section>
+        <section id="today" class="row mt-3" role="region" aria-live="polite">
+        </section>
 
       <!-- Forecast data section -->
         <section id="forecast" class="row mt-3" role="region" aria-live="polite">
-
       </div>
     </div>
   </div>
@@ -69,7 +71,7 @@
   <script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js"></script>
   <!-- jQuery -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script src="/assets/js/script.js"></script>
+  <script src="./assets/js/script.js"></script>
 </body>
 
 </html>
