--- a/index.html
+++ b/index.html
@@ -58,10 +58,18 @@
     <div class="col-lg-10 pb-3">
 
       <!-- Today's data section -->
+      <div class="card sectionHead">
+          Today's weather
+      </div>
+
         <section id="today" class="row mt-3" role="region" aria-live="polite">
         </section>
 
       <!-- Forecast data section -->
+      <div class="card sectionHead">
+          Five-day forecast
+      </div>
+
         <section id="forecast" class="row mt-3" role="region" aria-live="polite">
       </div>
     </div>
@@ -71,7 +79,7 @@
   <script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js"></script>
   <!-- jQuery -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script src="../assets/js/script.js"></script>
+  <script src="./assets/js/script.js"></script>
 </body>
 
 </html>
