--- a/index.html
+++ b/index.html
@@ -58,19 +58,13 @@
     <div class="col-lg-10 pb-3">
 
       <!-- Today's data section -->
-      <div class="card sectionHead">
-          Today's weather
-      </div>
-
-        <section id="today" class="row mt-3" role="region" aria-live="polite">
+        <section id="today" class="row mt-3 sectionBody" role="region" aria-live="polite">
         </section>
 
       <!-- Forecast data section -->
-      <div class="card sectionHead">
-          Five-day forecast
-      </div>
+        <section id="forecast" class="row mt-3 sectionBody" role="region" aria-live="polite">
 
-        <section id="forecast" class="row mt-3" role="region" aria-live="polite">
+        </div>
       </div>
     </div>
   </div>
