--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
       <!-- Current and historical search section -->
       <aside class="col-lg-2 pb-3">
-        <h2 id="form-heading" class="mt-1 h3 form-label">
+        <h2 id="form-heading" class="mt-1 form-label search-head">
           Search for a city:
         </h2>
 
@@ -45,7 +45,7 @@
 
           <!-- Historical searches section -->
           <div class="list-group" id="history">
-            <h2 class="mt-1 h3">
+            <h2 class="mt-1 search-head">
               Past searches:
             </h2>
 
