--- a/index.html
+++ b/index.html
@@ -44,15 +44,17 @@
         </form>
 
           <!-- Historical searches section -->
-          <div class="list-group" id="history">
+          <div class="list-group">
             <h2 class="mt-1 search-head">
               Past searches:
             </h2>
 
-          <button class="card btn" id="btnHistory">
-              City name
-          </button>
-
+            <div id="history">
+              <button class="card btnClear">
+                  Clear saved cities
+              </button>
+              
+            </div>
         </div>
       </aside>
 
