make clearhistory function

--- a/index.html
+++ b/index.html
@@ -49,12 +49,13 @@
               Past searches:
             </h2>
 
-            <div id="history">
-              <button class="card btnClear">
-                  Clear saved cities
-              </button>
-              
+            <button class="card btnClear" id="btnClearHistory">
+              Clear saved cities
+          </button>
+
+            <div id="history">              
             </div>
+
         </div>
       </aside>
 
